--- a/ExampleEngine/ExampleEngine.vcxproj
+++ b/ExampleEngine/ExampleEngine.vcxproj
@@ -150,6 +150,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="FrogEngineFileParser.h" />
+    <ClInclude Include="Log.h" />
     <ClInclude Include="VertexArray.h" />
     <ClInclude Include="VertexBuffer.h" />
     <ClInclude Include="IndexBuffer.h" />
