--- a/ExampleEngine/ExampleEngine.vcxproj.filters
+++ b/ExampleEngine/ExampleEngine.vcxproj.filters
@@ -1,14 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <Filter Include="Header Files">
-      <UniqueIdentifier>{93995380-89BD-4b04-88EB-625FBE52EBFB}</UniqueIdentifier>
-      <Extensions>h;hh;hpp;hxx;h++;hm;inl;inc;ipp;xsd</Extensions>
-    </Filter>
-    <Filter Include="Resource Files">
-      <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
-      <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
-    </Filter>
     <Filter Include="src">
       <UniqueIdentifier>{4FC737F1-C7A5-4376-A066-2A32D752A2FF}</UniqueIdentifier>
       <Extensions>cpp;c;cc;cxx;c++;cppm;ixx;def;odl;idl;hpj;bat;asm;asmx</Extensions>
@@ -18,6 +10,9 @@
     </Filter>
     <Filter Include="src\shaders">
       <UniqueIdentifier>{d2e2c208-145b-4e11-a75c-6834f3d1126c}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="src\Debug">
+      <UniqueIdentifier>{14839d0e-7da0-4ee3-b169-9a6a51232639}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
@@ -61,6 +56,9 @@
     </ClInclude>
     <ClInclude Include="FrogEngineFileParser.h">
       <Filter>src</Filter>
+    </ClInclude>
+    <ClInclude Include="Log.h">
+      <Filter>src\Debug</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
