--- a/ExampleEngine/ExampleEngine.vcxproj.filters
+++ b/ExampleEngine/ExampleEngine.vcxproj.filters
@@ -40,6 +40,9 @@
     <ClCompile Include="InputEvents.cpp">
       <Filter>src</Filter>
     </ClCompile>
+    <ClCompile Include="Camera.cpp">
+      <Filter>src\Render</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="IndexBuffer.h">
@@ -74,6 +77,12 @@
     </ClInclude>
     <ClInclude Include="InputEvents.h">
       <Filter>src</Filter>
+    </ClInclude>
+    <ClInclude Include="Vertex.h">
+      <Filter>src\Render</Filter>
+    </ClInclude>
+    <ClInclude Include="Camera.h">
+      <Filter>src\Render</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
