--- a/ExampleEngine/ExampleEngine.vcxproj.filters
+++ b/ExampleEngine/ExampleEngine.vcxproj.filters
@@ -102,5 +102,6 @@
     <ClInclude Include="BufferLayout.h">
       <Filter>src\Render</Filter>
     </ClInclude>
+    <ClInclude Include="Transform.h" />
   </ItemGroup>
 </Project>
