--- a/ExampleEngine/ExampleEngine.vcxproj.filters
+++ b/ExampleEngine/ExampleEngine.vcxproj.filters
@@ -14,6 +14,12 @@
     <Filter Include="src\Additional">
       <UniqueIdentifier>{508ff1e1-57da-4580-bd92-be4d07a5a6a5}</UniqueIdentifier>
     </Filter>
+    <Filter Include="FrogRelease">
+      <UniqueIdentifier>{62b95c23-a806-4656-a15e-f7aea7fbaeb8}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="src\Additional\imgui">
+      <UniqueIdentifier>{1cd69c7d-50c3-4615-8912-f70e5aed08df}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="IndexBuffer.cpp">
@@ -51,6 +57,24 @@
     </ClCompile>
     <ClCompile Include="Events.cpp">
       <Filter>src</Filter>
+    </ClCompile>
+    <ClCompile Include="imgui\imgui.cpp">
+      <Filter>src\Additional\imgui</Filter>
+    </ClCompile>
+    <ClCompile Include="imgui\imgui_demo.cpp">
+      <Filter>src\Additional\imgui</Filter>
+    </ClCompile>
+    <ClCompile Include="imgui\imgui_draw.cpp">
+      <Filter>src\Additional\imgui</Filter>
+    </ClCompile>
+    <ClCompile Include="imgui\imgui_tables.cpp">
+      <Filter>src\Additional\imgui</Filter>
+    </ClCompile>
+    <ClCompile Include="imgui\imgui_widgets.cpp">
+      <Filter>src\Additional\imgui</Filter>
+    </ClCompile>
+    <ClCompile Include="imgui\imgui_impl_glfw_gl3.cpp">
+      <Filter>src\Additional\imgui</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -103,5 +127,31 @@
       <Filter>src\Render</Filter>
     </ClInclude>
     <ClInclude Include="Transform.h" />
+    <ClInclude Include="imgui\imconfig.h">
+      <Filter>src\Additional\imgui</Filter>
+    </ClInclude>
+    <ClInclude Include="imgui\imgui.h">
+      <Filter>src\Additional\imgui</Filter>
+    </ClInclude>
+    <ClInclude Include="imgui\imgui_internal.h">
+      <Filter>src\Additional\imgui</Filter>
+    </ClInclude>
+    <ClInclude Include="imgui\imstb_rectpack.h">
+      <Filter>src\Additional\imgui</Filter>
+    </ClInclude>
+    <ClInclude Include="imgui\imstb_textedit.h">
+      <Filter>src\Additional\imgui</Filter>
+    </ClInclude>
+    <ClInclude Include="imgui\imstb_truetype.h">
+      <Filter>src\Additional\imgui</Filter>
+    </ClInclude>
+    <ClInclude Include="imgui\imgui_impl_glfw_gl3.h">
+      <Filter>src\Additional\imgui</Filter>
+    </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="imgui\.editorconfig">
+      <Filter>src\Additional\imgui</Filter>
+    </None>
   </ItemGroup>
 </Project>
