--- a/ExampleEngine/ExampleEngine.vcxproj.filters
+++ b/ExampleEngine/ExampleEngine.vcxproj.filters
@@ -76,6 +76,9 @@
     <ClCompile Include="imgui\imgui_impl_glfw_gl3.cpp">
       <Filter>src\Additional\imgui</Filter>
     </ClCompile>
+    <ClCompile Include="SpriteSheetAnimation.cpp">
+      <Filter>src</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="IndexBuffer.h">
@@ -147,6 +150,9 @@
     </ClInclude>
     <ClInclude Include="imgui\imgui_impl_glfw_gl3.h">
       <Filter>src\Additional\imgui</Filter>
+    </ClInclude>
+    <ClInclude Include="SpriteSheetAnimation.h">
+      <Filter>src</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
