--- a/ExampleEngine/ExampleEngine.vcxproj
+++ b/ExampleEngine/ExampleEngine.vcxproj
@@ -81,6 +81,7 @@
   <ItemGroup>
     <ClCompile Include="Application.cpp" />
     <ClCompile Include="Camera.cpp" />
+    <ClCompile Include="EntryPoint.cpp" />
     <ClCompile Include="ErrorCatcher.cpp" />
     <ClCompile Include="Events.cpp" />
     <ClCompile Include="FrogEngineFileParser.cpp" />
@@ -91,6 +92,7 @@
     <ClCompile Include="imgui\imgui_impl_glfw_gl3.cpp" />
     <ClCompile Include="imgui\imgui_tables.cpp" />
     <ClCompile Include="imgui\imgui_widgets.cpp" />
+    <ClCompile Include="Layer.h" />
     <ClCompile Include="SpriteSheetAnimation.cpp" />
     <ClCompile Include="Texture.cpp" />
     <ClCompile Include="VertexArray.cpp" />
@@ -103,6 +105,7 @@
     <ClInclude Include="Application.h" />
     <ClInclude Include="BufferLayout.h" />
     <ClInclude Include="Camera.h" />
+    <ClInclude Include="EntryPoint.h" />
     <ClInclude Include="ErrorCatcher.h" />
     <ClInclude Include="FrogEngine.h" />
     <ClInclude Include="FrogEngineFileParser.h" />
@@ -114,6 +117,7 @@
     <ClInclude Include="imgui\imstb_rectpack.h" />
     <ClInclude Include="imgui\imstb_textedit.h" />
     <ClInclude Include="imgui\imstb_truetype.h" />
+    <ClInclude Include="imgwrite.h" />
     <ClInclude Include="Log.h" />
     <ClInclude Include="SpriteSheetAnimation.h" />
     <ClInclude Include="stb_image.h" />
